Update brokers + rules pages and styling

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,10 @@
 
         <nav class="tabs">
           <a class="tab active" href="/">Workspace</a>
-          <a class="tab" href="/outcomes.html">Outcomes</a>
-          <a class="tab" href="/watchlist.html">Watch</a>
+          <a class="tab" href="/outcomes">Outcomes</a>
+          <a class="tab" href="/watch">Watch</a>
+          <a class="tab" href="/rules">Rules</a>
+          <a class="tab" href="/brokers">Brokers</a>
         </nav>
       </div>
 
