--- a/public/watchlist.html
+++ b/public/watchlist.html
@@ -19,10 +19,13 @@
         </div>
 
         <nav class="tabs">
-          <a class="tab" href="/">Workspace</a>
-          <a class="tab" href="/outcomes.html">Outcomes</a>
-          <a class="tab active" href="/watchlist.html">Watch</a>
-        </nav>
+          <nav class="tabs">
+            <a class="tab" href="/">Workspace</a>
+            <a class="tab" href="/outcomes">Outcomes</a>
+            <a class="tab active" href="/watch">Watch</a>
+            <a class="tab" href="/rules">Rules</a>
+            <a class="tab" href="/brokers">Brokers</a>
+          </nav>
       </div>
 
       <div class="topbar-right">
