--- a/public/rules.html
+++ b/public/rules.html
@@ -22,7 +22,7 @@
           <a class="tab" href="/outcomes">Outcomes</a>
           <a class="tab" href="/watch">Watch</a>
           <a class="tab active" href="/rules">Rules</a>
-          <a class="tab" href="/brokers">Brokers</a>
+          <a class="tab" href="/backtest">Backtest</a>
         </nav>
       </div>
     </header>
