--- a/public/watchlist.html
+++ b/public/watchlist.html
@@ -24,7 +24,7 @@
             <a class="tab" href="/outcomes">Outcomes</a>
             <a class="tab active" href="/watch">Watch</a>
             <a class="tab" href="/rules">Rules</a>
-            <a class="tab" href="/brokers">Brokers</a>
+            <a class="tab" href="/backtest">Backtest</a>
           </nav>
       </div>
 
