--- a/public/backtest.html
+++ b/public/backtest.html
@@ -9,13 +9,12 @@
   </head>
 
   <body>
-    <div class="bg-wash"></div>
+    <div class="app">
 
-    <header class="topbar">
-      <div class="topbar-left">
+      <header class="topbar">
         <div class="brand">
-          <div class="brand-dot"></div>
-          <div class="brand-text">Trading Agent</div>
+          <span class="dot"></span>
+          <span class="brand-name">Trading Agent</span>
         </div>
 
         <nav class="tabs">
@@ -25,166 +24,143 @@
           <a class="tab" href="/rules">Rules</a>
           <a class="tab active" href="/backtest">Backtest</a>
         </nav>
-      </div>
 
-      <div class="topbar-right">
-        <div class="status">
-          <div class="status-dot" id="socketDot"></div>
-          <div class="status-text">Realtime</div>
+        <div class="right">
+          <span class="pill" id="dataLivePill">Realtime</span>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <main class="shell">
-      <section class="stack">
+      <main class="content">
 
-        <!-- INPUTS -->
-        <div class="card">
-          <div class="card-head">
-            <div>
-              <div class="card-title">Backtest</div>
-              <div class="card-hint">Run deterministic intraday backtests on stored 1m candles (rolling 365d).</div>
+        <div class="grid-2">
+          <div class="card">
+            <div class="card-head">
+              <div>
+                <div class="card-title">Backtest</div>
+                <div class="card-hint">Run strategy simulations on historical 1m bars (resampled for larger timeframes).</div>
+              </div>
+
+              <div class="card-actions">
+                <button class="btn" id="refreshBtn">Reset</button>
+                <button class="btn primary" id="runBtn">Run</button>
+              </div>
             </div>
 
-            <div class="card-actions">
-              <span id="btStatusPill" class="pill">Idle</span>
-            </div>
-          </div>
+            <div class="form-grid" style="margin-top: 12px;">
+              <label class="small">
+                Strategy
+                <select id="strategySelect" class="input" style="width:100%; margin-top:6px;">
+                  <option value="active">Active strategy</option>
+                </select>
+                <div class="card-hint" style="margin-top:6px;">Choose a saved strategy version or use the active one.</div>
+              </label>
 
-          <div style="padding:16px; display:grid; gap:12px;">
-            <div style="display:grid; gap:12px; grid-template-columns: 1.4fr 0.7fr 0.6fr 0.6fr;">
-              <label class="small" style="display:block;">
-                Tickers (watchlist)
-                <select
-                id="tickersSelect"
-                multiple
-                size="10"
-                style="
-                  width:100%;
-                  margin-top:6px;
-                  border:1px solid var(--border);
-                  border-radius:10px; /* keep page consistency but not pill */
-                  background:rgba(255,255,255,0.02);
-                  color:var(--text);
-                  padding:10px;
-                  line-height:1.4;
-                  appearance:auto;
-                  -webkit-appearance:auto;
-                  outline:none;
-                  box-shadow:none;
-                "
-              ></select>                <div class="card-hint" style="margin-top:6px;">Multi-select: Cmd/Ctrl + click</div>
+              <label class="small">
+                Tickers
+                <select id="tickersSelect" class="input" multiple style="width:100%; height: 110px; margin-top:6px;"></select>
+                <div class="card-hint" style="margin-top:6px;">Pulled from Watchlist.</div>
               </label>
 
               <label class="small" style="display:block;">
                 Timeframe
                 <select id="timeframeSelect" class="input" style="width:100%; margin-top:6px;">
                   <option value="1m">1m</option>
+                  <option value="2m">2m</option>
                   <option value="5m">5m</option>
+                  <option value="15m">15m</option>
+                  <option value="30m">30m</option>
+                  <option value="1h">1h</option>
+                  <option value="4h">4h</option>
+                  <option value="1d">1d</option>
+                  <option value="1w">1w</option>
                 </select>
-                <div class="card-hint" style="margin-top:6px;">5m is resampled from 1m.</div>
+                <div class="card-hint" style="margin-top:6px;">All timeframes are resampled from 1m.</div>
               </label>
 
-              <label class="small" style="display:block;">
+              <label class="small">
                 Start date (NY)
                 <input id="startDate" class="input" type="date" style="width:100%; margin-top:6px;" />
               </label>
 
-              <label class="small" style="display:block;">
+              <label class="small">
                 End date (NY)
                 <input id="endDate" class="input" type="date" style="width:100%; margin-top:6px;" />
               </label>
             </div>
 
-            <div style="display:flex; gap:10px; align-items:center;">
-              <button id="runBtn" class="btn">Run Backtest</button>
-              <button id="refreshBtn" class="btn btn-ghost">Refresh Status</button>
-              <div id="runMeta" class="card-hint" style="margin:0;"></div>
+            <div style="margin-top: 12px; display:flex; gap:10px; align-items:center;">
+              <span id="btStatusPill" class="pill pill-idle">Idle</span>
+              <span id="runMeta" class="small muted"></span>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-head">
+              <div>
+                <div class="card-title">Metrics</div>
+                <div class="card-hint">Summary statistics for the last run.</div>
+              </div>
+              <div class="card-actions">
+                <select id="sortSelect" class="input">
+                  <option value="entryTs_desc">Newest</option>
+                  <option value="entryTs_asc">Oldest</option>
+                  <option value="r_desc">R (high → low)</option>
+                  <option value="r_asc">R (low → high)</option>
+                </select>
+              </div>
+            </div>
+
+            <div id="metricsGrid" class="metricsGrid" style="margin-top: 12px;"></div>
+          </div>
+        </div>
+
+        <div class="grid-2" style="margin-top: 14px;">
+          <div class="card">
+            <div class="card-head">
+              <div>
+                <div class="card-title">Equity Curve</div>
+                <div class="card-hint">Hover the curve to see P/L and account value (assumes 1R = 1%).</div>
+              </div>
+              <div class="card-actions"></div>
+            </div>
+
+            <div style="margin-top: 12px;">
+              <canvas id="equityCanvas" style="width:100%; height: 240px;"></canvas>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-head">
+              <div>
+                <div class="card-title">Trades</div>
+                <div class="card-hint">Detailed trades from the last run.</div>
+              </div>
+            </div>
+
+            <div style="margin-top: 12px; overflow:auto; max-height: 340px;">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Ticker</th>
+                    <th>Dir</th>
+                    <th>Level</th>
+                    <th>Entry</th>
+                    <th>Stop</th>
+                    <th>Target</th>
+                    <th>Exit</th>
+                    <th>Reason</th>
+                    <th>R</th>
+                    <th>Bars</th>
+                  </tr>
+                </thead>
+                <tbody id="tradesBody"></tbody>
+              </table>
             </div>
           </div>
         </div>
 
-        <!-- METRICS -->
-        <div class="card">
-          <div class="card-head">
-            <div>
-              <div class="card-title">Summary Metrics</div>
-              <div class="card-hint">All returns are in R-multiples (2R target, fixed stop).</div>
-            </div>
-          </div>
-
-          <div id="metricsGrid" style="padding:16px; display:grid; gap:12px; grid-template-columns: repeat(4, minmax(0, 1fr));"></div>
-        </div>
-
-<!-- EQUITY -->
-<div class="card">
-    <div class="card-head">
-      <div>
-        <div class="card-title">Equity Curve</div>
-        <div class="card-hint">Cumulative R across trades.</div>
-      </div>
-  
-      <div class="card-actions" style="display:flex; gap:8px; align-items:center;">
-        <span class="small" style="color:var(--muted);">Starting account ($)</span>
-        <input
-          id="startEquity"
-          class="input small"
-          type="number"
-          min="0"
-          step="100"
-          placeholder="10000"
-          style="width:120px;"
-        />
-      </div>
+      </main>
     </div>
-  
-    <div style="padding:16px;">
-      <canvas id="equityCanvas" width="1000" height="220" style="width:100%; height:220px; display:block;"></canvas>
-    </div>
-  </div>
-
-        <!-- TRADES -->
-        <div class="card">
-          <div class="card-head">
-            <div>
-              <div class="card-title">Trade Log</div>
-              <div class="card-hint">Signal on close → fill next open. No lookahead.</div>
-            </div>
-
-            <div class="card-actions" style="display:flex; gap:8px; align-items:center;">
-              <span class="small" style="color:var(--muted);">Sort</span>
-              <select id="sortSelect" class="input small">
-                <option value="entryTs_desc">Entry time ↓</option>
-                <option value="entryTs_asc">Entry time ↑</option>
-                <option value="r_desc">R ↓</option>
-                <option value="r_asc">R ↑</option>
-              </select>
-            </div>
-          </div>
-
-          <div class="table-wrap">
-            <table>
-              <thead>
-                <tr>
-                  <th>Ticker</th>
-                  <th>Dir</th>
-                  <th>Level</th>
-                  <th>Entry</th>
-                  <th>Stop</th>
-                  <th>Target</th>
-                  <th>Exit</th>
-                  <th>Reason</th>
-                  <th>R</th>
-                  <th>Hold</th>
-                </tr>
-              </thead>
-              <tbody id="tradesBody"></tbody>
-            </table>
-          </div>
-        </div>
-
-      </section>
-    </main>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/backtest.js"></script>
